--- a/_config.yml
+++ b/_config.yml
@@ -22,10 +22,10 @@ repository               : "Ljfanny/Ljfanny.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "photo.jpeg"
+  avatar           : "profile.jpg"
   name             : "Jiefang Lin"
   pronouns         : # example: "she/her"  
-  bio              : # "Short biography for the left-hand sidebar"
+  bio              : "PhD student in Software Engineering at UT Austin"
   location         : "Austin, TX"
   employer         : "The University of Texas at Austin"
   uri              : # URL
